[project]
name = "gene-utils"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex",email = "temper8@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.0,<3.0.0)",
    "h5py (>=3.14.0,<4.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "pandas (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
